Add linked gallery carousel demo and improve keyboard nav
- Add a new "Linked Gallery Pages" carousel demo with multiple focusable
items per slide and improved styling - Enhance keyboard navigation to
support multiple focusable elements within a slide, allowing left/right
arrow keys to move focus between items before advancing slides - Improve
getComponent to better scope controls for multiple carousels using
shared selectors - Add tests for keyboard navigation and control
isolation across multiple carousels

--- a/demo/index.html
+++ b/demo/index.html
@@ -50,6 +50,95 @@
 					<div class="cycle-pager"></div>
 				</div>
 			</section>
+
+			<section class="demo-section">
+				<div class="demo-carousel">
+					<h2 class="demo-heading">Linked Gallery Pages</h2>
+					<div
+						tabindex="0"
+						class="cycle-slideshow multi-gallery"
+						data-cycle-slides="> div"
+						data-cycle-timeout="0"
+						data-cycle-fx="fade"
+						data-cycle-prev=".multi-gallery-prev"
+						data-cycle-next=".multi-gallery-next"
+						data-cycle-pager=".multi-gallery-pager"
+					>
+						<div class="multi-gallery-slide">
+							<div class="multi-gallery-track">
+								<a href="#gallery-1-photo-1">
+									<img
+										src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='200' height='150'><rect width='100%' height='100%' fill='%23e0f2fe'/><text x='50%' y='50%' dominant-baseline='middle' text-anchor='middle' font-size='24' fill='%231e3a8a'>Gallery 1A</text></svg>"
+										alt="Linked preview Gallery 1A"
+									/>
+								</a>
+								<a href="#gallery-1-photo-2">
+									<img
+										src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='200' height='150'><rect width='100%' height='100%' fill='%23fee2e2'/><text x='50%' y='50%' dominant-baseline='middle' text-anchor='middle' font-size='24' fill='%239b1c1c'>Gallery 1B</text></svg>"
+										alt="Linked preview Gallery 1B"
+									/>
+								</a>
+								<a href="#gallery-1-photo-3">
+									<img
+										src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='200' height='150'><rect width='100%' height='100%' fill='%23dcfce7'/><text x='50%' y='50%' dominant-baseline='middle' text-anchor='middle' font-size='24' fill='%2301662a'>Gallery 1C</text></svg>"
+										alt="Linked preview Gallery 1C"
+									/>
+								</a>
+							</div>
+						</div>
+						<div class="multi-gallery-slide">
+							<div class="multi-gallery-track">
+								<a href="#gallery-2-photo-1">
+									<img
+										src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='200' height='150'><rect width='100%' height='100%' fill='%23fef3c7'/><text x='50%' y='50%' dominant-baseline='middle' text-anchor='middle' font-size='24' fill='%238b5a1e'>Gallery 2A</text></svg>"
+										alt="Linked preview Gallery 2A"
+									/>
+								</a>
+								<a href="#gallery-2-photo-2">
+									<img
+										src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='200' height='150'><rect width='100%' height='100%' fill='%23ede9fe'/><text x='50%' y='50%' dominant-baseline='middle' text-anchor='middle' font-size='24' fill='%234c1d95'>Gallery 2B</text></svg>"
+										alt="Linked preview Gallery 2B"
+									/>
+								</a>
+								<a href="#gallery-2-photo-3">
+									<img
+										src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='200' height='150'><rect width='100%' height='100%' fill='%23cffafe'/><text x='50%' y='50%' dominant-baseline='middle' text-anchor='middle' font-size='24' fill='%23085575'>Gallery 2C</text></svg>"
+										alt="Linked preview Gallery 2C"
+									/>
+								</a>
+							</div>
+						</div>
+						<div class="multi-gallery-slide">
+							<div class="multi-gallery-track">
+								<a href="#gallery-3-photo-1">
+									<img
+										src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='200' height='150'><rect width='100%' height='100%' fill='%23fce7f3'/><text x='50%' y='50%' dominant-baseline='middle' text-anchor='middle' font-size='24' fill='%2383125b'>Gallery 3A</text></svg>"
+										alt="Linked preview Gallery 3A"
+									/>
+								</a>
+								<a href="#gallery-3-photo-2">
+									<img
+										src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='200' height='150'><rect width='100%' height='100%' fill='%23f5f5f5'/><text x='50%' y='50%' dominant-baseline='middle' text-anchor='middle' font-size='24' fill='%234a4a4a'>Gallery 3B</text></svg>"
+										alt="Linked preview Gallery 3B"
+									/>
+								</a>
+								<a href="#gallery-3-photo-3">
+									<img
+										src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='200' height='150'><rect width='100%' height='100%' fill='%23d1fae5'/><text x='50%' y='50%' dominant-baseline='middle' text-anchor='middle' font-size='24' fill='%23065646'>Gallery 3C</text></svg>"
+										alt="Linked preview Gallery 3C"
+									/>
+								</a>
+							</div>
+						</div>
+					</div>
+
+					<div class="demo-controls">
+						<button class="multi-gallery-prev" type="button">Previous set</button>
+						<button class="multi-gallery-next" type="button">Next set</button>
+					</div>
+					<div class="cycle-pager multi-gallery-pager"></div>
+				</div>
+			</section>
 		</main>
 
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
